<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="lblOK">OK</string>
    <string name="lblCancel">Cancel</string>
    <string name="lblConfirm">Confirm</string>
    <string name="app_name">MyFlightbook</string>
    <string name="tabNewFlight">New</string>
    <string name="tabAircraft">Aircraft</string>
    <string name="tabRecent">Recent</string>
    <string name="tabCurrency">Currency</string>
    <string name="tabTotals">Totals</string>
    <string name="tabVisited">Visited</string>
    <string name="tabTraining">Training</string>
    <string name="tabProfile">Profile</string>
    <string name="UserName">Please type your email address:</string>
    <string name="Password">Please type your password</string>
    <string name="signin">Sign in</string>
    <string name="TFATitle">Enter Authentication Code</string>
    <string name="TFAWatermark">######</string>
    <string name="TFAPrompt">Please enter the 6-digit code from your authenticator app</string>
    <string name="signInPrompt">You need to have an account on MyFlightbook.com to use MyFlightbook for Android.</string>
    <string name="statusNotSignedIn">You are not currently signed in.  Please sign in or create an account.</string>
    <string name="statusSignedIn">You are currently signed in as %s.</string>
    <string name="invalidAgeGate">According to the Google Play store, you must be at least 16 or have parental permission to use this app.</string>
    <string name="szSignIn">Sign In…</string>
    <string name="szSignOut">Sign Out</string>
    <string name="lblForgotPassword">Forgot your password?  Reset it at MyFlightbook.com</string>
    <string name="createuser">Create an account…</string>
    <string name="lblOptAutoDetect">Autodetect Takeoffs and Landings</string>
    <string name="lblOptRecord">Record flight path</string>
    <string name="lblOptRecordHiRes">Record High Resolution</string>
    <string name="lblUseSimGPS">Use Simulator Provided Location</string>
    <string name="lblUseSimGPSDesc">Some simulators like X-Plane can simulate your position; this overrides a GPS</string>
    <string name="lblOptRecordHiResDesc">Slower to upload/download, but works better with apps like CloudAhoy</string>
    <string name="lblOptIncludeHeliports">Include heliports</string>
    <string name="lblOptRoundNearestTenth">Use nearest tenth of an hour</string>
    <string name="lblOptUseHHMM">Enter times in HH:MM format</string>
    <string name="lblOptUseLocalTime">Use Local Time</string>
    <string name="lblOptTOSpeed">Takeoff speed (kts)</string>
    <string name="lblOptNightDefinition">Night flight starts</string>
    <string name="lblOptNightDefinitionSunset">Sunset</string>
    <string name="lblOptNightDefinitionSunsetPlus15">15 minutes after sunset</string>
    <string name="lblOptNightDefinitionSunsetPlus30">30 minutes after sunset</string>
    <string name="lblOptNightDefinitionSunsetPlus60">1 hour after sunset</string>
    <string name="lblOptNightDefinitionCivilTwilight">End of civil twilight</string>
    <string name="lblOptNightLandingsDefinition">Night landings occur</string>
    <string name="lblOptNightLandingsNight">During  night flight</string>
    <string name="lblOptNightLandingsSunsetPlus1hour">1 hour after sunset</string>
    <string name="lblOptUnitsHeader">Units</string>
    <string name="lblOptAltUnitsHeader">Altitude</string>
    <string name="lblOptSpeedUnitsHeader">Speed</string>
    <string name="lblOptUnitsFeet">Feet</string>
    <string name="lblOptUnitsMeters">Meters</string>
    <string name="lblOptUnitsKnots">Knots</string>
    <string name="lblOptUnitsMPH">Miles/hour</string>
    <string name="lblOptUnitsKPH">Km/hour</string>
    <string name="lblImageOptions">Flight display Options</string>
    <string name="lblShowFlightImages">Show images for flights</string>
    <string name="lblShowFlightTimes">Flight Detail</string>
    <string name="lblFlightDetailLow">Low</string>
    <string name="lblFlightDetailMed">Med</string>
    <string name="lblFlightDetailHigh">High</string>
    <string name="lblRouteColor">Route Color</string>
    <string name="lblPathColor">Path Color</string>
    <string name="lblMapStyle">Map Style</string>
    <string name="lblMapStyleStandard">Standard</string>
    <string name="lblMapStyleHybrid">Hybrid</string>
    <string name="lblMapStyleTerrain">Terrain</string>
    <string name="lblMapStyleSatellite">Satellite</string>
    <string name="lblNightMode">Night Mode</string>
    <string name="lblNightModeOff">Off</string>
    <string name="lblNightModeOn">On</string>
    <string name="lblNightModeAuto">Automatic</string>
    <string name="lblCockpitOptions">In the Cockpit</string>
    <string name="lblCockpitTach">Show Tachometer Start/Stop</string>
    <string name="lblCockpitHobbs">Show Hobbs Start/Stop</string>
    <string name="lblCockpitBlock">Show Block Out/In</string>
    <string name="lblCockpitFlight">Show Flight Start/Stop</string>
    <string name="lblCockpitEngine">Show Engine Start/Stop</string>
    <string name="lblRoute">Route</string>
    <string name="lblAppendNearest">Nearest</string>
    <string name="lblViewOnMap">View</string>
    <string name="lblAddApproaches">Add Approaches</string>
    <string name="lblComments">Comments</string>
    <string name="lblLandings">Total</string>
    <string name="lblLandingsAlt">Landings</string>
    <string name="lblFSDayLandings">Day\n(Full Stop)</string>
    <string name="lblFSNightLandings">Night\n(Full Stop)</string>
    <string name="lblApproaches">Approaches</string>
    <string name="lblHold">Hold</string>
    <string name="lblNight">Night</string>
    <string name="lblSimIMC">Sim. IMC</string>
    <string name="lblIMC">IMC</string>
    <string name="lblXC">X-Country</string>
    <string name="lblDual">Dual Rcvd.</string>
    <string name="lblGround">Ground Sim</string>
    <string name="lblCFI">Instructor</string>
    <string name="lblSIC">SIC</string>
    <string name="lblPIC">PIC</string>
    <string name="lblTotal">Total Time</string>
    <string name="lblHobbsStart">Starting Hobbs</string>
    <string name="lblEngineStart">Engine Start</string>
    <string name="lblFlightStart">Flight Start</string>
    <string name="lblHobbsEnd">Ending Hobbs</string>
    <string name="lblEngineEnd">Engine Stop</string>
    <string name="lblFlightEnd">Flight End</string>
    <string name="lblTachStart">Starting Tach</string>
    <string name="lblTachEnd">Ending Tach</string>
    <string name="lblElapsedTach">Tach</string>
    <string name="lblBtnAddAircraft">Add Aircraft</string>
    <string name="lblSchedule">Schedule</string>
    <string name="menuResetFlightShort">Reset</string>
    <string name="menuResetFlight">Reset Flight</string>
    <string name="menuAddFlightShort">Add</string>
    <string name="menuAddFlight">Add Flight</string>
    <string name="menuAddFlightLaterShort">Add Later</string>
    <string name="menuAddFlightLater">Add Flight Later</string>
    <string name="menuCheckFlight">Check Flight</string>
    <string name="menuDeleteFlight">Delete Flight</string>
    <string name="menuDeleteFlightShort">Delete</string>
    <string name="menuUpdateFlight">Update Flight</string>
    <string name="menuSaveFlight">Save Flight</string>
    <string name="menuSaveFlightShort">Save</string>
    <string name="menuDeleteImage">Delete</string>
    <string name="menuDeleteImageShort">Delete</string>
    <string name="menuEditComment">Edit Comment</string>
    <string name="menuEditCommentShort">Comment</string>
    <string name="menuViewImage">View</string>
    <string name="menuViewImageShort">View</string>
    <string name="menuUpdateAircraft">Update Aircraft</string>
    <string name="menuUpdateAircraftShort">Update</string>
    <string name="menuTakePicture">Take a picture</string>
    <string name="menuTakePictureShort">Camera</string>
    <string name="menuTakeVideo">Take a video</string>
    <string name="menuTakeVideoShort">Video</string>
    <string name="menuChoosePicture">Choose a picture</string>
    <string name="menuChoosePictureShort">Photos</string>
    <string name="menuSignFlight">Sign</string>
    <string name="menuDeleteAircraft">Delete Aircraft</string>
    <string name="menuDeleteAircraftShort">Delete</string>
    <string name="menuChooseTemplate">Templates for flight</string>
    <string name="menuChooseTemplateShort">Templates</string>
    <string name="menuAutoFill">Autofill</string>
    <string name="fqTextContains">Contains:</string>
    <string name="fqAirportsVisited">Airports:</string>
    <string name="fqTextContainsPrompt">Text to find</string>
    <string name="fqAirportsContainsPrompt">Airports visited</string>
    <string name="fqFlightDate">Dates for flights:</string>
    <string name="fqFlightAircraft">Flight Aircraft</string>
    <string name="fqFlightModel">Flight aircraft model</string>
    <string name="fqFlightModelNamePrompt">Model name</string>
    <string name="FlightQueryDistanceAllFlights">All flights</string>
    <string name="FlightQueryDistanceLocalFlights">Local flights only</string>
    <string name="FlightQueryDistanceNonLocalFlights">Non-local flights only</string>
    <string name="fqAircraftFeatures">Aircraft Features</string>
    <string name="afTailwheel">Tailwheel</string>
    <string name="afHighPerf">High Performance</string>
    <string name="afMotorglider">Motorglider</string>
    <string name="afMultiEngineHeli">Multi-Engine Helicopter</string>
    <string name="afEngineAny">Any Engine</string>
    <string name="afEnginePiston">Piston</string>
    <string name="afEngineTurboProp">TurboProp</string>
    <string name="afEngineJet">Jet</string>
    <string name="afEngineTurbineAny">Turbine (Any)</string>
    <string name="afEngineElectric">Electric</string>
    <string name="afInstanceAny">Any Aircraft</string>
    <string name="afInstanceReal">Real Aircraft</string>
    <string name="afInstanceTraining">Training Devices</string>
    <string name="afGlass">Glass Cockpit</string>
    <string name="afComplex">Complex</string>
    <string name="afRetract">Retractable Gear</string>
    <string name="afCSProp">Controllable Pitch Prop</string>
    <string name="afFlaps">Flaps</string>
    <string name="fqFlightFeatures">Flight Features</string>
    <string name="ffFSLanding">Full-stop Landings</string>
    <string name="ffFSNightLanding">Full-stop Night Landings</string>
    <string name="ffApproaches">Instrument Approaches</string>
    <string name="ffHold">Holding Procedures</string>
    <string name="ffTelemetry">Telemetry Data</string>
    <string name="ffXC">Cross-country time</string>
    <string name="ffSimIMC">Simulated IMC time</string>
    <string name="ffIMC">Actual IMC time</string>
    <string name="ffNight">Night flight time</string>
    <string name="ffIsPublic">Flight data is shared</string>
    <string name="ffIsSigned">Flight is signed</string>
    <string name="ffDual">Dual Received time</string>
    <string name="ffCFI">Instructor time</string>
    <string name="ffSIC">SIC time</string>
    <string name="ffPIC">PIC time</string>
    <string name="fqDateAllTime">All Time</string>
    <string name="fqDate12Months">Trailing 12 Months</string>
    <string name="fqDate6Months">Trailing 6 Months</string>
    <string name="fqDate30Days">Trailing 30 Days</string>
    <string name="fqDate90Days">Trailing 90 Days</string>
    <string name="fqDateYTD">Year-to-Date</string>
    <string name="fqDateThisMonth">This Month</string>
    <string name="fqDatePreviousMonth">Previous Month</string>
    <string name="fqDatePreviousYear">Previous Year</string>
    <string name="fqDateStartDate">Start Date</string>
    <string name="fqDateEndDate">End Date</string>
    <string name="fqDateCustom">Custom</string>
    <string name="fqProperties">Properties</string>
    <string name="menuFlightSearch">Find Flights</string>
    <string name="ccHeader">Category/Class</string>
</resources>