<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
   	<item android:title="@string/menuDeleteFlight" android:id="@+id/btnDeleteFlight" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_discard"></item>
	<item android:title="@string/menuUpdateFlight" android:id="@+id/btnUpdateFlight" android:showAsAction="ifRoom"></item> 
	<item android:id="@+id/menuTakePicture" android:titleCondensed="@string/menuTakePictureShort" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_camera" android:title="@string/menuTakePicture"></item>
	<item android:id="@+id/menuTakeVideo" android:titleCondensed="@string/menuTakeVideoShort" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_video"  android:title="@string/menuTakeVideo"></item>
	<item android:id="@+id/menuChoosePicture" android:titleCondensed="@string/menuChoosePictureShort" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_picture" android:title="@string/menuChoosePicture"></item>
    <item android:id="@+id/menuSignFlight" android:title="@string/menuSignFlight" android:showAsAction="always"></item>
</menu>
