<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuUpdateAircraft"
        android:title="@string/menuUpdateAircraft"
        android:titleCondensed="@string/menuUpdateAircraftShort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuTakePicture"
        android:icon="@drawable/ic_action_camera"
        android:title="@string/menuTakePicture"
        android:titleCondensed="@string/menuTakePictureShort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuChoosePicture"
        android:icon="@drawable/ic_action_picture"
        android:title="@string/menuChoosePicture"
        android:titleCondensed="@string/menuChoosePictureShort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/findFlights"
        android:icon="@drawable/ic_action_search"
        android:title="@string/menuFlightSearch"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuDeleteAircraft"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/menuDeleteAircraft"
        android:titleCondensed="@string/menuDeleteAircraftShort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuViewSchedule"
        android:icon="@drawable/ic_action_go_to_today"
        android:title="@string/lblSchedule"
        android:titleCondensed="@string/lblSchedule"
        app:showAsAction="ifRoom" />
</menu>
