<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuDeleteImage"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/menuDeleteImage"
        android:titleCondensed="@string/menuDeleteImageShort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuAddComment"
        android:title="@string/menuEditComment"
        android:titleCondensed="@string/menuEditCommentShort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuViewImage"
        android:title="@string/menuViewImage"
        android:titleCondensed="@string/menuViewImageShort"
        app:showAsAction="ifRoom" />
</menu>
