<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuAddAircraft"
        android:title="@string/lblBtnAddAircraft"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/menuTakePicture"
        android:icon="@drawable/ic_action_camera"
        android:title="@string/menuTakePicture"
        android:titleCondensed="@string/menuTakePictureShort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuChoosePicture"
        android:icon="@drawable/ic_action_picture"
        android:title="@string/menuChoosePicture"
        android:titleCondensed="@string/menuChoosePictureShort"
        app:showAsAction="ifRoom" />
</menu>